Bug 505549 - keyboard layout widget empty in "Plasma (X11)" session
Summary: keyboard layout widget empty in "Plasma (X11)" session
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Keyboard Layout widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: X11-only
Depends on:
Blocks:
 
Reported: 2025-06-12 21:01 UTC by alanas.00
Modified: 2025-06-13 12:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (226.95 KB, image/webp)
2025-06-12 21:01 UTC, alanas.00
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alanas.00 2025-06-12 21:01:43 UTC
Created attachment 182239 [details]
screenshot

STEPS TO REPRODUCE
1. login "Plasma (X11)" session

OBSERVED RESULT
keyboard layout widget is empty (see screenshot)

EXPECTED RESULT
keyboard layout widget shows keyboard layout

SOFTWARE/OS VERSIONS
Linux: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.0

ADDITIONAL INFORMATION
first bad commit: https://invent.kde.org/plasma/plasma-desktop/-/commit/ead59561b7277c9d75066e6fb420e109beb40944
Comment 1 Bojidar Marinov [:bojidar-bg] 2025-06-12 21:50:17 UTC
Managed to replicate locally with Xephyr and kwin_x11; seems to be an X11-only problem.

I would imagine that restoring the registerService and registerObject lines (and the corresponding unregisterObject and unregisterService) would be enough to resolve the regression (apparently, KeyboardDeamon is needed under X11 and I missed that) without undoing the rest of that change, but I'll have to rebuild things locally and see if that alone fixes the issue. Feel free to test and submit an MR with the same if you manage to get it faster than me (:'
Comment 2 Bug Janitor Service 2025-06-13 11:49:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3068
Comment 3 Bojidar Marinov [:bojidar-bg] 2025-06-13 12:24:59 UTC
Git commit d88a5e61f4e85ef96bf399acb8c1ba4de4539d7c by Bojidar Marinov.
Committed on 13/06/2025 at 11:40.
Pushed by nicolasfella into branch 'master'.

kcms/keyboard: restore org.kde.keyboard service registration

Partially reverts ead59561b7277c9d75066e6fb420e109beb40944.

M  +11   -0    kcms/keyboard/keyboard_daemon.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/d88a5e61f4e85ef96bf399acb8c1ba4de4539d7c