kcms/keyboard: restore org.kde.keyboard service registration

Partially reverts ead59561b7277c9d75066e6fb420e109beb40944.

BUG: 505549